# ppsfm

./: .gitignore  CMakeLists.txt  README.md
Data/: data.mat
src/: DataReader.cpp  dataCleaning.h  dataStructures.hpp  estimatedFundamentalMatrix.h  logger.h  main.cpp  options.h  pairAffinityCalculator.h  pipelineManager.cpp  pipelineManager.h  ppsfm_initialisation.cpp  ppsfm_initialisation.h
src/implementation/: DataReader.cpp  EstimatedFundamentalMatrix.cpp  Helper.cpp  Refinement.cpp  diagnosis.cpp  estimatedPoints.cpp  estimatedRobustPoints.cpp  estimatedRobustViews.cpp  estimatedViews.cpp  factorCompletion.cpp  main.cpp  pairAffinityCalculator.cpp  pipelineManager.cpp  ppsfm_initialisation.cpp  pyramidalVisibilityScore.cpp
src/include/: DataReader.hpp  DataWriter.hpp  Helper.hpp  Refinement.h  data.h  dataCleaning.h  dataStructures.hpp  diagnosis.h  estimate_robust_views.h  estimatedFundamentalMatrix.h  estimatedPoints.h  estimatedRobustPoints.h  estimatedViews.h  factorCompletion.h  logger.h  options.h  pairAffinityCalculator.h  pipelineManager.h  ppsfm_initialisation.h  pyramidalVisibilityScore.h
